third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/enum/match_cover.exp
processed 4 tasks
task 0 lines 1-62:  publish [module 0xc0ffee::m {]
task 1 lines 65-94:  publish [module 0xc0ffee::n {]
task 2 lines 97-145:  publish [module 0xc0ffee::o {]
task 3 lines 147-197:  publish [module 0xc0ffee::o_fail {]
Error: compilation errors:
 error: unreachable pattern
    ┌─ TEMPFILE3:168:13
    │
168 │             E::V1 {..} => {}
    │             ^^^^^^^^^^

error: unreachable pattern
    ┌─ TEMPFILE3:178:13
    │
178 │             E::V1 {b: G::G2{ a: H::H2 {b: _}}, a: F::F1} => {},
    │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
    ┌─ TEMPFILE3:187:13
    │
187 │             E::V1 {..} => {}
    │             ^^^^^^^^^^


